# dubloons

./: .env.example  .gitignore  .stylish-haskell.yaml  Dockerfile  README.md  arm64.Dockerfile  build.Dockerfile  default-ghc9.nix  default-ghc9.nix_todo  default.nix  dubloons.cabal  dubloons.nix  stack.yaml
src/: Main.hs
src/Lib/: Discord.hs  Pirate.hs  Prelude.hs  Types.hs  Util.hs
src/Lib/Pirate/: Nyaa.hs  NyaaPantsu.hs  TPB.hs
src/Test/: Main.hs
test/: test-main.hs
test/Lib/: Types.hs
