name:                dubloons
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/dubloons#readme
license:             PublicDomain
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dubloons
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , aeson
    , bytestring
    , containers
    , discord-haskell
    , http-client
    , hxt
    , hxt-xpath
    , mtl
    , process
    , safe-foldable
    , req
    , retry
    , text
    , transformers
  other-modules: Lib.Pirate, Lib.Prelude, Lib.Discord, Lib.Types

test-suite dubloons-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             test-main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , aeson
    , bytestring
    , containers
    , discord-haskell
    , hspec
    , http-client
    , hxt
    , hxt-xpath
    , mtl
    , process
    , QuickCheck
    , req
    , retry
    , safe-foldable
    , text
    , transformers 
  other-modules: Lib.Discord, Lib.Pirate, Lib.Prelude, Lib.Types