cabal-version:       3.0
name:                dubloons
version:             0.5.2.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/dubloons#readme
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable dubloons
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -Wno-type-defaults
  build-depends:       base >= 4.7 && < 5
    , aeson
    , bytestring
    , containers
    , discord-haskell
    , feed
    , http-client
    , hxt
    , hxt-xpath
    , mtl
    , process
    , safe-foldable
    , req
    , retry
    , text
    , transformers
    , unix
    , xml-types
  other-modules:
      Lib.Discord
    , Lib.Pirate.TPB
    , Lib.Pirate.Nyaa
    , Lib.Pirate.NyaaPantsu
    , Lib.Prelude
    , Lib.Types
